Modification de html et css

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
    <h1>Un super titre</h1>
+   <ul>
+    <li>Côte d'ivoire</li>
+    <li>Mali</li>
+    <li>Guinée</li>
+   </ul>
 </body>
 </html>
